--- a/patterns/10_strings/boundaries_FR.tex
+++ b/patterns/10_strings/boundaries_FR.tex
@@ -45,6 +45,6 @@ par zéro, qui peut être stocké et traité comme un tout.
 Un autre exemple est la fonction \IT{strtok()}. Elle prend une chaîne et y écrit
 des octets nul.
 %%It thus transforms input string into some kind of buffer, which has several zero-terminated C-strings.
-C'est ainsi qu'elle transforme la chaîne d'entrées en une sorte de buffer, qui contient
+C'est ainsi qu'elle transforme la chaîne d'entrée en une sorte de buffer, qui contient
 plusieurs chaînes-C terminées par zéro.
 
